--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,8 @@
-name    = AlignDB-Stopwatch
-author  = Wang Qiang <wangqiang1997@gmail.com>
-license = Perl_5
-copyright_holder = Wang Qiang
+name             = AlignDB-Stopwatch
+author           = Qiang Wang <wang-q@outlook.com>
+license          = Perl_5
+copyright_holder = Qiang Wang
+copyright_year   = 2008
 
-[@Filter]
-bundle = @Classic
-
-[AutoVersion]
-major = 0
- 
-[PodWeaver]
-
-[ModuleBuild]
-[NextRelease]
-
-[AutoPrereqs]
+[@Milla]
+installer = MakeMaker
