--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,12 @@ blib
 !META.json
 !LICENSE
 
+# put any other files you don't want to check in here,
+# such as .DS_Store (OSX), *.bak, etc.
+.DS_Store
+*.log
+*.bak
+
+# IDE
+.idea
 .komodotools
